<resources>
    <string name="app_name">pra_asses</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="segitiga">Segitiga</string>
    <string name="zhafira">Zhafira Zahra</string>
    <string name="nim">6706184106</string>
    <string name="kelas">D3IF-42-02</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="hitung">Hitung</string>
    <string name="luas">Luas</string>
    <string name="keliling">Keliling</string>
    <string name="hasil1">0</string>
    <string name="hasil2">0</string>
    <string name="share">Share</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Tinggi</string>
</resources>
