<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/alas"
                android:ems="10"
                android:id="@+id/et_alas_s" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/tinggi"
                android:ems="10"
                android:id="@+id/et_tinggi_s" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/et_alas_s"/>
        <Button
                android:text="@string/hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_hitung_s" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_share_s" app:layout_constraintVertical_bias="0.499"/>
        <TextView
                android:text="@string/luas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="92dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
        />
        <TextView
                android:text="@string/keliling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="92dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/hasil1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_luas_s"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginStart="104dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/hasil2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_kll_s"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginEnd="108dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:text="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_share_s" android:layout_marginBottom="88dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>